next possible fix for request appointment windown zoom on mobile

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -354,3 +354,11 @@ only screen and (min-device-pixel-ratio: 1.5){
   }
 
 }
+
+body {
+  padding-right: 0px !important
+}
+
+.modal-open {
+  overflow-y: auto;
+}
